Fix duplicate Mark as done button on mobile view

--- a/src/core/features/course/components/module/module.scss
+++ b/src/core/features/course/components/module/module.scss
@@ -189,14 +189,18 @@
     }
 
     @include media-breakpoint-down(md) {
+        .core-module-buttons {
+            background: red !important;
+        }
+
         .core-module-buttons core-course-module-completion {
-            display: none;
+            display: none !important;
         }
     }
 
     @include media-breakpoint-up(md) {
         core-course-module-completion.activity-extra {
-            display: none;
+            display: none !important;
         }
     }
 
